--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dialectlabs/blinks": "^0.3.1",
+    "cors": "^2.8.5",
     "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "viem": "^2.17.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "thirdweb": "^5.32.1",
+    "viem": "^2.17.0",
+    "wagmi": "^2.10.9"
   },
   "devDependencies": {
     "@types/node": "^20",
