--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dialectlabs/blinks": "^0.3.1",
+    "@solana/web3.js": "^1.95.0",
     "cors": "^2.8.5",
     "next": "14.2.4",
     "react": "^18.2.0",
