--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@dialectlabs/blinks": "^0.4.6",
+    "@noble/curves": "^1.4.2",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.0",
+    "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "next": "14.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "thirdweb": "^5.32.1",
     "viem": "^2.17.0",
-    "wagmi": "^2.10.9"
+    "wagmi": "^2.10.9",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20",
